GNOME Bugzilla – Bug 711574
GtkPlacesSidebar is missing "local-only" flag
Last modified: 2013-11-09 23:33:11 UTC
With the patch to bug 711548 applied, open the gtk-demo's Pickers demo, and open the file chooser dialogue. Click on a remote unmounted bookmark and you'll get: The folder contents could not be displayed Cannot change to folder because it is not local There should be a "local-only" property that mimicks the file-chooser's one.
Shouldn't we rather drop the local-only thing ? Is there any reason to keep it ?